# wellness-agent-rag

./: main.py  pyproject.toml  requirements.txt  visual-view.md
app/agents/: graph.py  intake_agent.py  retrieval_agent.py  state.py  synthesizer_agent.py
app/data/: advisors.jsonl
app/utils/: knowledge_test.ipynb  test_db.py  vectorstore.py  viz_app.py
chroma_db/6b9cf2ba-26f1-409b-92ce-eb1ac1ff780a/: index_metadata.pickle
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
